bug find fixes