@@ -10,8 +10,6 @@ import java.io.UnsupportedEncodingException;
 import org.apache.commons.lang3.builder.HashCodeBuilder;
 import org.simplesql.util.Bytes;
 
-import com.google.common.hash.Hasher;
-
 /**
  * 
  * Accepts as argument an Object.<br/>
@@ -101,88 +99,125 @@ public final class DynamicCell implements Cell<String> {
 		else if (Byte.class.isAssignableFrom(this.val.getClass()))
 			this.val = ((Byte) this.val) + val;
 		else
-			this.val = new Long(((Integer) this.val) + val); // here we need to
-																// type to Long
+			this.val = Long.valueOf(((Integer) this.val) + val); // here we need
+																	// to
+																	// type to
+																	// Long
 	}
 
 	@Override
 	public void inc(double val) {
 		if (Double.class.isAssignableFrom(this.val.getClass()))
-			this.val = ((Double) this.val) + val;
+			this.val = Double.valueOf(((Double) this.val).doubleValue() + val);
 		else if (Integer.class.isAssignableFrom(this.val.getClass()))
-			this.val = ((Integer) this.val) + val;
+			this.val = Integer
+					.valueOf((int) (((Integer) this.val).intValue() + val));
 		else if (Long.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double(((Long) this.val) + val); // change type to
+			this.val = Double.valueOf(((Double) this.val).doubleValue() + val); // change
+																				// type
+																				// to
 		else if (Float.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double((Long) this.val) + val;
+			this.val = new Float(((Float) this.val).floatValue() + val);
 		else if (Short.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double((Short) this.val) + val;
+			this.val = Short
+					.valueOf((short) (((Short) this.val).shortValue() + val));
 		else if (Byte.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double((Byte) this.val) + val;
+			this.val = Byte
+					.valueOf((byte) (((Byte) this.val).byteValue() + val));
 		else
-			this.val = new Double(((Integer) this.val) + val); // here we need
-																// to change the
-																// type to
-																// Double
+			this.val = Double.valueOf(((Integer) this.val) + val); // here we
+																	// need
+																	// to change
+																	// the
+																	// type to
+																	// Double
 	}
-	
+
 	@Override
 	public void inc(float val) {
 		if (Double.class.isAssignableFrom(this.val.getClass()))
-			this.val = ((Double) this.val) + val;
-		else if (Long.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double(((Long) this.val) + val); // change type to
+			this.val = Double.valueOf(((Double) this.val).doubleValue() + val);
 		else if (Integer.class.isAssignableFrom(this.val.getClass()))
-			this.val = ((Integer) this.val) + val;								// Double
+			this.val = Integer
+					.valueOf((int) (((Integer) this.val).intValue() + val));
+		else if (Long.class.isAssignableFrom(this.val.getClass()))
+			this.val = Double.valueOf(((Double) this.val).doubleValue() + val); // change
+																				// type
+																				// to
 		else if (Float.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double((Long) this.val) + val;
+			this.val = new Float(((Float) this.val).floatValue() + val);
 		else if (Short.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double((Short) this.val) + val;
+			this.val = Short
+					.valueOf((short) (((Short) this.val).shortValue() + val));
 		else if (Byte.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double((Byte) this.val) + val;
+			this.val = Byte
+					.valueOf((byte) (((Byte) this.val).byteValue() + val));
 		else
-			this.val = new Double(((Integer) this.val) + val); // here we need
+			this.val = Double.valueOf(((Integer) this.val) + val); // here we
+																	// need
+																	// to change
+																	// the
+																	// type to
+																	// Double
 	}
 
 	@Override
 	public void inc(short val) {
 		if (Double.class.isAssignableFrom(this.val.getClass()))
-			this.val = ((Double) this.val) + val;
-		else if (Long.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double(((Long) this.val) + val); // change type to
+			this.val = Double.valueOf(((Double) this.val).doubleValue() + val);
 		else if (Integer.class.isAssignableFrom(this.val.getClass()))
-			this.val = ((Integer) this.val) + val;								// Double
+			this.val = Integer
+					.valueOf((int) (((Integer) this.val).intValue() + val));
+		else if (Long.class.isAssignableFrom(this.val.getClass()))
+			this.val = Double.valueOf(((Double) this.val).doubleValue() + val); // change
+																				// type
+																				// to
 		else if (Float.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double((Long) this.val) + val;
+			this.val = new Float(((Float) this.val).floatValue() + val);
 		else if (Short.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double((Short) this.val) + val;
+			this.val = Short
+					.valueOf((short) (((Short) this.val).shortValue() + val));
 		else if (Byte.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double((Byte) this.val) + val;
+			this.val = Byte
+					.valueOf((byte) (((Byte) this.val).byteValue() + val));
 		else
-			this.val = new Double(((Integer) this.val) + val); // here we need
+			this.val = Double.valueOf(((Integer) this.val) + val); // here we
+																	// need
+																	// to change
+																	// the
+																	// type to
+																	// Double
 	}
 
 	@Override
 	public void inc(byte val) {
 		if (Double.class.isAssignableFrom(this.val.getClass()))
-			this.val = ((Double) this.val) + val;
+			this.val = Double.valueOf((double) ((Double) this.val)
+					.doubleValue() + val);
 		else if (Long.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double(((Long) this.val) + val); // change type to
+			this.val = Long
+					.valueOf((long) (((Long) this.val).longValue() + val)); // change
+																			// type
+																			// to
 		else if (Integer.class.isAssignableFrom(this.val.getClass()))
-			this.val = ((Integer) this.val) + val;								// Double
+			this.val = Integer.valueOf((int) (((Integer) this.val)).intValue()
+					+ val); // Double
 		else if (Float.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double((Long) this.val) + val;
+			this.val = new Float(
+					(float) (((Float) this.val).floatValue() + val));
 		else if (Short.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double((Short) this.val) + val;
+			this.val = Short
+					.valueOf((short) (((Short) this.val).shortValue() + val));
 		else if (Byte.class.isAssignableFrom(this.val.getClass()))
-			this.val = new Double((Byte) this.val) + val;
+			this.val = Byte
+					.valueOf((byte) (((Byte) this.val).byteValue() + val));
 		else
-			this.val = new Double(((Integer) this.val) + val); // here we need
+			this.val = Integer.valueOf(((Integer) this.val).intValue() + val);
 	}
 
 	@Override
 	public byte getByteValue() {
-		return (byte)((Number.class.isAssignableFrom(val.getClass())) ? ((Number) val)
+		return (byte) ((Number.class.isAssignableFrom(val.getClass())) ? ((Number) val)
 				.intValue() : 0);
 	}
 
@@ -195,7 +230,7 @@ public final class DynamicCell implements Cell<String> {
 	@Override
 	public short getShortValue() {
 		return (Number.class.isAssignableFrom(val.getClass())) ? ((Number) val)
-				.shortValue() : (short)0;
+				.shortValue() : (short) 0;
 	}
 
 	@Override
@@ -232,17 +267,23 @@ public final class DynamicCell implements Cell<String> {
 
 	@Override
 	public void inc(Counter counter) {
-		if (Double.class.isAssignableFrom(val.getClass()) || double.class.isAssignableFrom(val.getClass())) {
+		if (Double.class.isAssignableFrom(val.getClass())
+				|| double.class.isAssignableFrom(val.getClass())) {
 			inc(counter.getDoubleValue());
-		} else if (Long.class.isAssignableFrom(val.getClass()) || long.class.isAssignableFrom(val.getClass())) {
+		} else if (Long.class.isAssignableFrom(val.getClass())
+				|| long.class.isAssignableFrom(val.getClass())) {
 			inc(counter.getLongValue());
-		} else if (Integer.class.isAssignableFrom(val.getClass()) || int.class.isAssignableFrom(val.getClass())) {
+		} else if (Integer.class.isAssignableFrom(val.getClass())
+				|| int.class.isAssignableFrom(val.getClass())) {
 			inc(counter.getIntValue());
-		} else if (Float.class.isAssignableFrom(val.getClass()) || float.class.isAssignableFrom(val.getClass())) {
+		} else if (Float.class.isAssignableFrom(val.getClass())
+				|| float.class.isAssignableFrom(val.getClass())) {
 			inc(counter.getFloatValue());
-		} else if (Short.class.isAssignableFrom(val.getClass()) || short.class.isAssignableFrom(val.getClass())) {
+		} else if (Short.class.isAssignableFrom(val.getClass())
+				|| short.class.isAssignableFrom(val.getClass())) {
 			inc(counter.getShortValue());
-		} else if (Byte.class.isAssignableFrom(val.getClass()) || byte.class.isAssignableFrom(val.getClass())) {
+		} else if (Byte.class.isAssignableFrom(val.getClass())
+				|| byte.class.isAssignableFrom(val.getClass())) {
 			inc(counter.getByteValue());
 		}
 	}
@@ -250,25 +291,32 @@ public final class DynamicCell implements Cell<String> {
 	@Override
 	public Cell<String> copy(boolean resetToDefaults) {
 
-		if (Double.class.isAssignableFrom(val.getClass()) || double.class.isAssignableFrom(val.getClass())) {
+		if (Double.class.isAssignableFrom(val.getClass())
+				|| double.class.isAssignableFrom(val.getClass())) {
 			Object copy = ((Double) val).doubleValue();
 			return new DynamicCell((resetToDefaults) ? 0D : copy);
-		} else if (Long.class.isAssignableFrom(val.getClass()) || long.class.isAssignableFrom(val.getClass())) {
+		} else if (Long.class.isAssignableFrom(val.getClass())
+				|| long.class.isAssignableFrom(val.getClass())) {
 			Object copy = ((Long) val).longValue();
 			return new DynamicCell((resetToDefaults) ? 0L : copy);
-		} else if (Integer.class.isAssignableFrom(val.getClass()) || int.class.isAssignableFrom(val.getClass())) {
+		} else if (Integer.class.isAssignableFrom(val.getClass())
+				|| int.class.isAssignableFrom(val.getClass())) {
 			Object copy = ((Integer) val).intValue();
 			return new DynamicCell((resetToDefaults) ? 0 : copy);
-		} else if (Boolean.class.isAssignableFrom(val.getClass()) || boolean.class.isAssignableFrom(val.getClass())) {
+		} else if (Boolean.class.isAssignableFrom(val.getClass())
+				|| boolean.class.isAssignableFrom(val.getClass())) {
 			Object copy = ((Boolean) val).booleanValue();
 			return new DynamicCell((resetToDefaults) ? false : copy);
-		} else if (Float.class.isAssignableFrom(val.getClass()) || float.class.isAssignableFrom(val.getClass())) {
+		} else if (Float.class.isAssignableFrom(val.getClass())
+				|| float.class.isAssignableFrom(val.getClass())) {
 			Object copy = ((Float) val).floatValue();
 			return new DynamicCell((resetToDefaults) ? false : copy);
-		} else if (Short.class.isAssignableFrom(val.getClass()) || short.class.isAssignableFrom(val.getClass())) {
+		} else if (Short.class.isAssignableFrom(val.getClass())
+				|| short.class.isAssignableFrom(val.getClass())) {
 			Object copy = ((Short) val).shortValue();
 			return new DynamicCell((resetToDefaults) ? false : copy);
-		} else if (Byte.class.isAssignableFrom(val.getClass()) || byte.class.isAssignableFrom(val.getClass())) {
+		} else if (Byte.class.isAssignableFrom(val.getClass())
+				|| byte.class.isAssignableFrom(val.getClass())) {
 			Object copy = ((Byte) val).byteValue();
 			return new DynamicCell((resetToDefaults) ? false : copy);
 
@@ -287,19 +335,26 @@ public final class DynamicCell implements Cell<String> {
 	public Object getMax() {
 
 		Object max = null;
-		if (Double.class.isAssignableFrom(this.val.getClass()) || double.class.isAssignableFrom(val.getClass()))
+		if (Double.class.isAssignableFrom(this.val.getClass())
+				|| double.class.isAssignableFrom(val.getClass()))
 			max = Double.MAX_VALUE;
-		else if (Long.class.isAssignableFrom(this.val.getClass()) || long.class.isAssignableFrom(val.getClass()))
+		else if (Long.class.isAssignableFrom(this.val.getClass())
+				|| long.class.isAssignableFrom(val.getClass()))
 			max = Long.MAX_VALUE;
-		else if (Integer.class.isAssignableFrom(this.val.getClass()) || int.class.isAssignableFrom(val.getClass()))
+		else if (Integer.class.isAssignableFrom(this.val.getClass())
+				|| int.class.isAssignableFrom(val.getClass()))
 			max = Integer.MAX_VALUE;
-		else if (Boolean.class.isAssignableFrom(this.val.getClass()) || boolean.class.isAssignableFrom(val.getClass()))
+		else if (Boolean.class.isAssignableFrom(this.val.getClass())
+				|| boolean.class.isAssignableFrom(val.getClass()))
 			max = Integer.MAX_VALUE;
-		else if (Float.class.isAssignableFrom(this.val.getClass()) || float.class.isAssignableFrom(val.getClass()))
+		else if (Float.class.isAssignableFrom(this.val.getClass())
+				|| float.class.isAssignableFrom(val.getClass()))
 			max = Float.MAX_VALUE;
-		else if (Short.class.isAssignableFrom(this.val.getClass()) || short.class.isAssignableFrom(val.getClass()))
+		else if (Short.class.isAssignableFrom(this.val.getClass())
+				|| short.class.isAssignableFrom(val.getClass()))
 			max = Short.MAX_VALUE;
-		else if (Byte.class.isAssignableFrom(this.val.getClass()) || byte.class.isAssignableFrom(val.getClass()))
+		else if (Byte.class.isAssignableFrom(this.val.getClass())
+				|| byte.class.isAssignableFrom(val.getClass()))
 			max = Byte.MAX_VALUE;
 		else {
 			max = (char) 128;
@@ -311,19 +366,26 @@ public final class DynamicCell implements Cell<String> {
 	@Override
 	public Object getMin() {
 		Object min = null;
-		if (Double.class.isAssignableFrom(this.val.getClass()) || double.class.isAssignableFrom(val.getClass()))
+		if (Double.class.isAssignableFrom(this.val.getClass())
+				|| double.class.isAssignableFrom(val.getClass()))
 			min = Double.MIN_VALUE;
-		else if (Long.class.isAssignableFrom(this.val.getClass()) || long.class.isAssignableFrom(val.getClass()))
+		else if (Long.class.isAssignableFrom(this.val.getClass())
+				|| long.class.isAssignableFrom(val.getClass()))
 			min = Long.MIN_VALUE;
-		else if (Integer.class.isAssignableFrom(this.val.getClass()) || int.class.isAssignableFrom(val.getClass()))
+		else if (Integer.class.isAssignableFrom(this.val.getClass())
+				|| int.class.isAssignableFrom(val.getClass()))
 			min = Integer.MIN_VALUE;
-		else if (Boolean.class.isAssignableFrom(this.val.getClass()) || boolean.class.isAssignableFrom(val.getClass()))
+		else if (Boolean.class.isAssignableFrom(this.val.getClass())
+				|| boolean.class.isAssignableFrom(val.getClass()))
 			min = Integer.MIN_VALUE;
-		else if (Float.class.isAssignableFrom(this.val.getClass()) || float.class.isAssignableFrom(val.getClass()))
+		else if (Float.class.isAssignableFrom(this.val.getClass())
+				|| float.class.isAssignableFrom(val.getClass()))
 			min = Float.MIN_VALUE;
-		else if (Short.class.isAssignableFrom(this.val.getClass()) || short.class.isAssignableFrom(val.getClass()))
+		else if (Short.class.isAssignableFrom(this.val.getClass())
+				|| short.class.isAssignableFrom(val.getClass()))
 			min = Short.MIN_VALUE;
-		else if (Byte.class.isAssignableFrom(this.val.getClass()) || byte.class.isAssignableFrom(val.getClass()))
+		else if (Byte.class.isAssignableFrom(this.val.getClass())
+				|| byte.class.isAssignableFrom(val.getClass()))
 			min = Byte.MIN_VALUE;
 		else {
 			min = (char) 0;
@@ -363,19 +425,26 @@ public final class DynamicCell implements Cell<String> {
 
 	@Override
 	public int byteLength() {
-		if (Double.class.isAssignableFrom(val.getClass()) || double.class.isAssignableFrom(val.getClass())) {
+		if (Double.class.isAssignableFrom(val.getClass())
+				|| double.class.isAssignableFrom(val.getClass())) {
 			return 9;
-		} else if (Long.class.isAssignableFrom(val.getClass()) || long.class.isAssignableFrom(val.getClass())) {
+		} else if (Long.class.isAssignableFrom(val.getClass())
+				|| long.class.isAssignableFrom(val.getClass())) {
 			return 9;
-		} else if (Integer.class.isAssignableFrom(val.getClass()) || int.class.isAssignableFrom(val.getClass())) {
+		} else if (Integer.class.isAssignableFrom(val.getClass())
+				|| int.class.isAssignableFrom(val.getClass())) {
 			return 5;
-		} else if (Boolean.class.isAssignableFrom(val.getClass()) || boolean.class.isAssignableFrom(val.getClass())) {
+		} else if (Boolean.class.isAssignableFrom(val.getClass())
+				|| boolean.class.isAssignableFrom(val.getClass())) {
 			return 2;
-		} else if (Float.class.isAssignableFrom(val.getClass()) || float.class.isAssignableFrom(val.getClass())) {
+		} else if (Float.class.isAssignableFrom(val.getClass())
+				|| float.class.isAssignableFrom(val.getClass())) {
 			return 5;
-		} else if (Short.class.isAssignableFrom(val.getClass()) || short.class.isAssignableFrom(val.getClass())) {
+		} else if (Short.class.isAssignableFrom(val.getClass())
+				|| short.class.isAssignableFrom(val.getClass())) {
 			return 5;
-		} else if (Byte.class.isAssignableFrom(val.getClass()) || byte.class.isAssignableFrom(val.getClass())) {
+		} else if (Byte.class.isAssignableFrom(val.getClass())
+				|| byte.class.isAssignableFrom(val.getClass())) {
 			return 2;
 		} else {
 			try {
@@ -408,17 +477,18 @@ public final class DynamicCell implements Cell<String> {
 			return 2;
 		} else if (Float.class.isAssignableFrom(val.getClass())) {
 			arr[from] = TYPE.FLOAT.id;
-			Bytes.writeBytes(Float.floatToIntBits(getFloatValue()), arr, from + 1);
+			Bytes.writeBytes(Float.floatToIntBits(getFloatValue()), arr,
+					from + 1);
 			return 5;
 		} else if (Short.class.isAssignableFrom(val.getClass())) {
 			arr[from] = TYPE.SHORT.id;
-			Bytes.writeBytes((int)getShortValue(), arr, from + 1);
+			Bytes.writeBytes((int) getShortValue(), arr, from + 1);
 			return 5;
 		} else if (Byte.class.isAssignableFrom(val.getClass())) {
 			arr[from] = TYPE.BYTE.id;
 			Bytes.writeBytes(getByteValue(), arr, from + 1);
 			return 2;
-		
+
 		} else {
 			try {
 				byte[] strbytes = getData().getBytes("UTF-8");
@@ -454,12 +524,12 @@ public final class DynamicCell implements Cell<String> {
 			val = Float.intBitsToFloat(Bytes.readInt(arr, from + 1));
 			return 2;
 		} else if (type == TYPE.SHORT.id) {
-			val = (short)Bytes.readInt(arr, from + 1);
+			val = (short) Bytes.readInt(arr, from + 1);
 			return 2;
 		} else if (type == TYPE.BYTE.id) {
 			val = arr[from];
 			return 2;
-		
+
 		} else if (type == TYPE.STRING.id) {
 			try {
 				int len = Bytes.readInt(arr, from + 1);
@@ -524,6 +594,5 @@ public final class DynamicCell implements Cell<String> {
 	public Class<?> getJavaType() {
 		return val.getClass();
 	}
-
 
 }
